[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "1.1.2"
description = "Shared utilities for casual scripting"
authors = [{ name = "Nadav Elsberg" }]
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]