[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "1.1.23"
description = "Shared utilities for casual scripting"
authors = [{ name = "Nadav Elsberg", email = "Nadav.Elsberg@protonmail.com" }]
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/NadavElsbreg/common.git" }
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]